# demucs-denoiser

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  LICENSE.md  README.md  pyproject.toml  supervisord.conf
.github/workflows/: docker-publish.yml
app/: audio.py  celery_app.py  main.py  models.py  s3.py  utils.py  worker.py
